--- a/css/reset.css
+++ b/css/reset.css
@@ -1,13 +1,21 @@
-body{
-    padding: 0;
+* {
     margin: 0;
-    background: #fff;
-    color: black;
-    font-family: Sen;
-
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
-p, h1, h2, h3, h4, h5 ,h6, span{
-    padding: 0;
-    margin: 0;
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    display: block;
 }
