--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-.authors {
-    width: 1280px;
-    height: 776px;
-
+.container {
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
 .authors-title {
@@ -13,37 +12,33 @@
     margin-bottom: 48px;
 }
 
-.block-row {
+.authors-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-
+    justify-content: center;
+    gap: 32px;
 }
 
-.block-row-element-content {
+.authors-list-item{
     display: flex;
     flex-direction: column;
-    width: 296px;
-    height: 324px;
-    background: var(--Light-grey, #F4F4F4);
     align-items: center;
-    margin: 0 32px 32px 0;
+    background: #F4F4F4;
 }
 
-.block-row-element-content:nth-child(4),
-.block-row-element-content:nth-child(8) {
-    margin: 0;
+#yellow{
+    background: #FBF6EA;
 }
 
-.block-row-element-content:nth-child(n+5):nth-child(-n+8) {
-    margin: 0;
-}
-
-.author_img {
+.author-img {
     margin: 40px 0 20px;
+    border-radius: 100%;
+    width: 128px;
+    height: 128px;
+
 }
 
-.author_name {
+.author-name {
     font-size: 28px;
     font-weight: 700;
     line-height: 40px;
@@ -51,11 +46,19 @@
     letter-spacing: -1px;
 }
 
-.author_text {
+.author-text {
     color: var(--Medium-grey, #6D6E76);
     font-family: Inter;
     font-size: 14px;
     line-height: 20px;
     /* 142.857% */
-    margin-bottom: 20px;
+    margin: 0 28px 20px;
+
+}
+
+.authors-list-item-iconlist {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-bottom: 40px;
 }
